nextpos-deployment.yml
# https://tachingchen.com/blog/kubernetes-rolling-update-with-deployment/#rolling-update
# https://stackoverflow.com/questions/40366192/kubernetes-how-to-make-deployment-to-update-image
# https://kubernetes.io/docs/concepts/containers/images/
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nextpos-service
spec:
  replicas: 2
  selector:
    matchLabels:
      app: nextpos-service
  minReadySeconds: 120
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  template:
    metadata:
      labels:
        app: nextpos-service
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: nextpos-service
        image: docker.io/joelin/nextpos-service:latest
        imagePullPolicy: Always
        ports:
          - containerPort: 8080
        volumeMounts:
          - mountPath: /config
            name: application-props
            readOnly: true
      volumes:
        - name: application-props
          configMap:
            name: application-gcp-props
            defaultMode: 420
            items:
              - key: application-gcp.properties
                path: application-gcp.properties
